Got text input working and implemented an unfinished edit box stub
 - Implemented text input focus in widget manager
 - Implemented minimalistic, unfinished edit box stub
 - Fixed font manager print alpha function to only write if there
   is something to write
 - Fixed control character char events in WinDOS back end
 - Fixed compiler detection in build "system"

--- a/README
+++ b/README
@@ -49,13 +49,12 @@
   ********************
 
   Short term:
-    - Get text input working
     - Add more useful widgets
     - Make the library useful for small GUI applications
 
   Mid term:
     - Load GUI skin and default fonts from image & config files
-    - Built in dialog boxes, like message box, file open and file safe
+    - Built in dialog boxes like message box, file open and file safe
     - Assure thread safety
     - OpenGL back end
 
