--- a/README
+++ b/README
@@ -5,109 +5,59 @@
   This (sgui) is a miniature cross platform GUI library that originally
   started out as an overgrown Xlib play pen.
 
-  The whole library is written in plain ANSI C (C89) with a simple build
-  system consisting of a single shell script per platform that keeps track of
-  changes and executes gcc for the *nix version and mingw for the WinDOS cross
-  compilation.
-
-  The 's' in "sgui" really was intended to mean "small" or "simple", but over
-  time, lots of other possible meanings for the letter 's' came to my mind, so
-  the s stands for whatever you want it to.
+  The whole library is written in plain ANSI C (C89) with minimalistic,
+  simple, lightweight desing in mind.
 
   The main motivation was to write a simple, small GUI systems for small
   aplications that need a simple, "just works" GUI, after being unsatisfied
   with existing GUI solutions that are incredibly huge, bloated, resource
   hogging monsters that tend to be hard to use, if not even forcing a specific
   structure to your code and requiring a custom pre-preprocessor (you know the
-  one I mean^^). It should be simple, small, easy to use and preferably in C.
+  one I mean^^). It should be simple, small and easy to use.
 
-  Also, I was in the need for a something that had "just works" support for
-  modern OpenGL (3.x/4.x core), including easy off-screen rendering to
-  textures.
+  The 's' in "sgui" was intended to mean "small" and "simple", but over time,
+  lots of other possible meanings for the letter 's' came to my mind, so the
+  's' stands for whatever you want it to.
 
-  Apperently something like that is rather hard to come by, so I rolled my
-  own, starting with an Xlib play pen to kill boredomeness.
+
+  The sgui library offers a range of features:
+    - Lightweight
+        - Comparatively small size
+        - Comparatively small memory footprint
+    - Easy to use aplication programming interface
+        - Object-oriented desing
+        - Written entirely in ANSI C89
+    - Cross platform
+        - Tested on various GNU/Linux distributions, 32 and 64 bit x86
+        - Tested on Mircrosoft Windows(R) 98 and 7 (32 bit and 64 bit)
+    - Optional OpenGL(R) support
+        - Supports older and newer versions
+        - core profile as well as compatibillity profile
+        - OpenGL(R) widget for rendering inside a normal GUI application
+        - can create a native window with OpenGL(R) context and render
+          widgets using OpenGL(R) transparently
+    - Permissive Free Software (aka "Open Source") license
+        - X11, aka MIT license (License text added below)
+        - Allows you to do whatever you want, as long as credit is given
 
 
   What's the status?
   ******************
 
-  There are working Xlib and WinDOS backends that basically mange a window,
-  handle input and provide an implementation of an abstract canvas type for
-  rendering. Widgets are managed by a widget manager.
+  The library core (OS abstraction, backend implementation, fundementals) with
+  the features as stated above is currently nearing its completion.
 
-  Widgets render themselves using a canvas object (e.g. from a window) and
-  by using a skinning subsystem.
+  Some basic widgets have been implemented.
 
-  Font rasterisation is done using FreeType 2 directly through wrapper
-  functions.
+  The functionallity offered by library in its current state mostly works, but
+  it is by no means ready for production use as is.
 
-  Widget events (e.g. button pressed, checkbox checked, ...) and window
-  events (e.g. left clicked, 's' key pressed, window closed, ...) can be
-  received over callbacks.
-
-  OpenGL context creation works and the OpenGL back end is work in progress.
-
-  Currently, the code is being reviewed, cleaned and simplified. Documentation
-  writing has begun and is in progress.
-
-  The library has been compiled and tested on multiple GNU/Linux systems
-  without warnings with all gcc warning flags set and has, according to
-  valgrind, no memory leaks (except for a leak inside Xlib, or is it a
-  valgrind bug?) and the WinDOS port has been confirmed to work under Wine,
-  WinDOS 7 (32 & 64 Bit) and WinDOS 98 on a machine from 2005. A test
-  application has been successuflly compiled with MSVC 2010 Express under
-  WinDOS 7. The whole thing compiles and runs on the Raspberry PI under Arch
-  ARM, but does not work properly yet.
+  If you have any comments, suggestions, complaints, patches, cookies or
+  whatever, I would be glad to hearing from you.
 
 
-  ADHD version: Things are starting to come together nicely and It'd be nice
-  if you gave it a try and sent me some feedback, but I wouldn't exactly 
-  advice people to use the library for production use.
-
-
-  What are your plans?
-  ********************
-
-  Current milestone:
-    - Complete OpenGL backend
-        - Add core profile implementation
-        - Frame buffer configuration for sub view widget
-    - Implement horizontal scrolling for frame widget
-    - Implement continuos redrawing mode for sub view widget
-    - Complete documentation
-        - Internal structure in hacking chapter once settled
-        - Chapter on using OpenGL
-        - Add chapter on working with sgui in multithreaded programs
-
-  Next milestone:
-    - Add tab focus switching for mouseless usage
-    - Add list box widget
-    - Add combo box widget
-    - Add spinner widget
-    - Add slider widget
-    - Add icon view widget
-    - Add tree view widget
-    - Add directory view widget
-    - Add tooltips
-    - Add context menues
-    - Add window manager for managing and decorating sub windows
-
-  Next milestone:
-    - Add message box
-    - Add file select dialog
-    - Add font select dialog
-    - Add color select dialog
-
-  Next milestone:
-    - Add OpenGL ES port similart to OpenGL port
-    - Add Direct3D port similart to OpenGL port
-
-  This is shit!
-  *************
-
-  Hence the name sgui. If you have suggestions for improvements, drop me a
-  line.
+  If you are interested in my what's going on, you may also want to take a
+  look at https://github.com/AgentD/sgui/issues/milestones
 
 
   License
